Adds keyboard inputs for combat