@@ -7,5 +7,5 @@ public class Constants {
 
     // The dimensions of a spite and world tile
     public static final int SPRITE_DIMENSION = 25;
-
+//--module-path "C:\Program Files\Java\javafx-sdk-18.0.1\lib" --add-modules=javafx.controls
 }
